<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.wit.donation10.Donate"
    tools:showIn="@layout/activity_donate">

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="257dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/donateTitle"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="404dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/donateSubtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle"
        app:layout_constraintVertical_bias="0.868" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toStartOf="@+id/amountPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateSubtitle">

        <RadioButton
            android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/direct" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="175dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountPicker" />

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paymentMethod"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="30dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginBottom="127dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle" />

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalSoFar"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="456dp" />

</android.support.constraint.ConstraintLayout>
